--- a/如何使用梯子工具实现翻墙-科学上网？.md
+++ b/如何使用梯子工具实现翻墙-科学上网？.md
@@ -81,3 +81,9 @@
 ##### 我觉得还是蛮好用的
 
 ![img](https://pica.zhimg.com/80/v2-8063aa45780faa2d4f5b66446eb32671_720w.png)
+
+## 推荐阅读
+
+- [2025科学上网指南 ](https://tanqingbo.cn/科学上网之VPN篇/)
+- [苹果/IOS系统手机实现科学上网教程-翻墙VPN软件工具](https://tanqingbo.cn/ios-open-internet/)
+- [安卓/Android系统手机实现科学上网教程-翻墙VPN软件工具](https://tanqingbo.cn/Android-open-internet/)
